# AuRo_robo_arm

./: .gitignore  README.md
dependencies/: interbotix_jazzy.repos
scripts/: prepare_interbotix_jazzy.py  read_dynamixel_errors.py  scan_dynamixels.py
src/: calib_data.txt
src/auro_robo_arm/: package.xml  setup.cfg  setup.py
src/auro_robo_arm/auro_robo_arm/: __init__.py  arm_tag_follower.py  nudge_joint.py  pulse_gripper.py  safe_arm_stow.py  tag_detector.py  waist_tag_scanner.py
src/auro_robo_arm/config/: apriltag.yaml  usb_modes.yaml  vx300.yaml  vx300_arm_only.yaml  vx300s_arm_only.yaml
src/auro_robo_arm/launch/: arm_tag_follower.launch.py  moveit.launch.py  nudge_joint.launch.py  safe_arm_stow.launch.py  tag_detector.launch.py  usb_bringup.launch.py  view_robot.launch.py  waist_tag_scan.launch.py
src/auro_robo_arm/rviz/: vx300.rviz
udev/: 99-auro-u2d2.rules
