<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auro_robo_arm</name>
  <version>0.1.0</version>
  <description>Application-layer helpers for commanding an Interbotix X-Series arm over the USB/U2D2 ROS 2 driver.</description>
  <maintainer email="sanat@example.com">Sanat</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>interbotix_xs_msgs</exec_depend>
  <exec_depend>interbotix_xsarm_control</exec_depend>
  <exec_depend>interbotix_xsarm_descriptions</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
